# world-digger-amethyst

./: Cargo.toml  README.md  todo.txt
assets/: fly_camera.ron
config/: display.ron  input.ron
porting/src/: player.rs  ui.rs
resources/: display_config.ron
src/: game.rs  main.rs  player.rs  ui.rs
src/worldgen/: ChunkRequestComp.rs  bundle.rs  mod.rs
