[package]
name = "world-digger"
version = "0.1.0"
authors = ["Joël Lupien (Jojolepro) <jojolepromain@gmail.com>"]

[dependencies]
amethyst = { git = "https://github.com/jojolepro/amethyst", branch = "uilayout" }
amethyst-rhusics = { git = "https://github.com/jojolepro/amethyst-rhusics", branch = "feature/spatial-collision" }
rhusics-ecs = { version = "0.1", features = ["eders"] }
rhusics-core = { version = "0.1", features = ["specs", "eders"] }
specs = "0.10"
shrev = "0.8"
shred = "0.5"
collision = "0.14"
rand = "0.3"