[package]
name = "pdig"
version = "0.1.0"
authors = ["Alve Larsson <larsalvelarsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features=["no-slow-safety-checks"]}

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]